js262/test/language/literals/regexp/named-groups/invalid-non-id-start-groupspecifier-5.js


/*---
description: GroupSpecifier must be identifier-like.
esid: prod-GroupSpecifier
negative:
  phase: parse
  type: SyntaxError
features: [regexp-named-groups]
---*/

$DONOTEVALUATE();

/(?<a\uDCA4>.)/;
